--- a/index.html
+++ b/index.html
@@ -1,31 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Animation-website-tutorial</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <header>
-      <nav>
-        <h3 id="logo">Car Shop</h2>
-        <img src="./images/menu.png" alt="" class="menu"/>
-      </nav>
-      <section>
-          <div class="hero">
-            <img src="/images/car.jpg" alt="" />
-            <h1 class="headline">Dream Big</h1>
-          </div>
-      </section>
-    </header>
-
-    <div class="slider">
-
-    </div>
-
-    <script src = "https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js" ></script>
-    <script src="./app.js"></script>
-  </body>
-</html>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Animation website</title>
+  <link rel="stylesheet" href="./style.css">
+</head>
+<body>
+  <header>
+    <nav>
+      <h3 id="logo">Car shop</h3>
+      <img src="./images/menu.png" alt="" class="menu">
+    </nav>
+    <section>
+      <div class="hero">
+        <img src="./images/car.jpg" alt="">
+        <h1 class="headline">Big Dream</h1>
+      </div>
+    </section>
+  </header>
+  <div class="slider"></div>
+  <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+  <script src="app.js"></script>  
+</body>
+</html> 
